Fixed menu overlap
Stopped menu from being overlapped by the page container

--- a/src/App.css
+++ b/src/App.css
@@ -57,7 +57,6 @@
   width: 100%;
   justify-content: center;
   padding-top: 1rem;
-  padding-bottom: 3rem;
 }
 
 .nav-container {
@@ -92,11 +91,8 @@
   display: none;
 }
 
-
-
-
 .page-container {
-  padding-top: 1.5rem;
+  padding-top: 4.5rem;
   position: relative;
   min-height: 100%;
 }
@@ -106,7 +102,6 @@
 *:after {
   box-sizing: inherit;
 }
-
 
 html {
   height: 100%;
@@ -129,10 +124,8 @@ html {
 
 @media screen and (max-width: 600px) {
     .sidebar-hamburger-button{
-    /* box-shadow: 0.0rem 0.1rem 1.2rem rgba(22, 22, 22, 0.5); */
     display: block;
     background-color: inherit;
-    /* background-color: inherit; */
     border: none;
     font-size: 1.5rem;
     align-self: stretch;
@@ -141,7 +134,12 @@ html {
     position: absolute;
     right: 0;
     opacity: 70%;
+    z-index: 3;
     
   }
 
+
+  .page-container {
+    padding-top: 3rem;
+  }
 }
